[gd_scene load_steps=31 format=2]

[ext_resource path="res://art/character/dripSheet.png" type="Texture" id=1]
[ext_resource path="res://art/character/character.png" type="Texture" id=2]
[ext_resource path="res://scenes/fish man.gd" type="Script" id=3]
[ext_resource path="res://art/misc/breamBuster_inUse.png" type="Texture" id=4]
[ext_resource path="res://scenes/torso.gd" type="Script" id=5]
[ext_resource path="res://art/misc/carbonFiberRod_inUse.png" type="Texture" id=6]
[ext_resource path="res://art/misc/blackMarket_inUse.png" type="Texture" id=7]
[ext_resource path="res://art/misc/rocketShot_1.png" type="Texture" id=8]
[ext_resource path="res://art/misc/reelMaster_inUse.png" type="Texture" id=9]
[ext_resource path="res://art/misc/fishinPole_inUse.png" type="Texture" id=10]
[ext_resource path="res://art/character/torso_red.png" type="Texture" id=11]
[ext_resource path="res://art/character/leftArm_default.png" type="Texture" id=12]
[ext_resource path="res://art/character/rightArm_red.png" type="Texture" id=13]
[ext_resource path="res://art/character/leftArm_red.png" type="Texture" id=14]
[ext_resource path="res://art/character/torso_default.png" type="Texture" id=15]
[ext_resource path="res://art/character/rightArm_default.png" type="Texture" id=16]
[ext_resource path="res://art/character/head.png" type="Texture" id=17]
[ext_resource path="res://art/character/bucketHat.png" type="Texture" id=18]
[ext_resource path="res://art/character/fishCrown.png" type="Texture" id=19]
[ext_resource path="res://art/audio/cast.wav" type="AudioStream" id=20]
[ext_resource path="res://art/audio/sploosh.wav" type="AudioStream" id=21]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "red",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 40, 26, 26, 21 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 10, 44, 27, 15 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 31, 52, 35, 7 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "bucketHat",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "fishCrown",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "red",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "red",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "rocketShot",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "blackMarket",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "reelMaster",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "breamBuster",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "carbonFiber",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 146.003

[node name="fish man" type="Node2D"]
script = ExtResource( 3 )

[node name="torso" type="AnimatedSprite" parent="."]
position = Vector2( 0.25, 2.75 )
scale = Vector2( 2, 2 )
frames = SubResource( 12 )
script = ExtResource( 5 )

[node name="vest" type="Sprite" parent="torso"]
visible = false
texture = SubResource( 8 )

[node name="legs" type="Sprite" parent="torso"]
position = Vector2( -0.125, 16.8178 )
rotation = 3.09486e-08
scale = Vector2( 0.962963, 1 )
texture = SubResource( 5 )

[node name="chanel" type="Sprite" parent="torso/legs"]
visible = false
position = Vector2( 0, 4 )
texture = SubResource( 9 )

[node name="head" type="AnimatedSprite" parent="torso"]
position = Vector2( 0, -16 )
frames = SubResource( 15 )

[node name="leftArm" type="AnimatedSprite" parent="torso"]
position = Vector2( -6.625, 3.125 )
rotation = -0.914553
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 13 )

[node name="rightArm" type="AnimatedSprite" parent="torso"]
position = Vector2( 8.875, 3.625 )
rotation = 0.514872
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 14 )

[node name="rod" type="AnimatedSprite" parent="torso/rightArm"]
position = Vector2( 7.00008, -5.39665 )
rotation = -0.349066
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 7 )

[node name="winArea" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="winArea"]
position = Vector2( 24, 0 )
shape = SubResource( 6 )

[node name="splooshSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )

[node name="castSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -28.0

[connection signal="body_entered" from="winArea" to="." method="_on_winArea_body_entered"]
